--- a/style.css
+++ b/style.css
@@ -12,24 +12,23 @@ body{
 }
 
 /* header sectoin  */
-
 .head-section{
    background-color: black;
-    height: 600px;
+   height: 550px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
-   border-radius: 10px;
+   border-radius: 25px;
 }
 
 .title-container,.banner-container{
     width: 500px;
     height: 500px;
+    color: white;
 }
 .header-title h1{
     font-weight: 700;
-font-size: 70px;
-
+    font-size: 70px;
 }
 .header-title button{
     background-color: red;
@@ -47,6 +46,7 @@ width: 100%;
 section{
     width: 1200px;
     margin: 0 auto;
+    margin-top: 100px;
 }
 /* main container */
 .container{
