--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-/* google font */
+/* ----------------------------------------------
+                  google font
+----------------------------------------------- */
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap');
 </style>
@@ -11,7 +13,18 @@ body{
     background-color: #F3F1FF;
 }
 
-/* header sectoin  */
+/*--------------------------------------------------
+      common for main and header section width 
+---------------------------------------------------- */
+header,main{
+    width: 1200px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+/* ---------------------------------------------
+                  header sectoin
+---------------------------------------------  */
 .head-section{
    background-color: black;
    height: 550px;
@@ -42,18 +55,17 @@ body{
 .banner-container .header-banner img{
 width: 100%;
 }
-/* main section */
-section{
-    width: 1200px;
-    margin: 0 auto;
-    margin-top: 100px;
-}
-/* main container */
+
+/*---------------------------------------------
+                    main container
+----------------------------------------------- */
 .container{
     display: flex;
-
+    margin-bottom: 50px;
 }
-/* this is upcomming matche section */
+/* ------------------------------------------------
+            this is upcomming matche section
+--------------------------------------------------- */
 .upcomming-match{
     background-color: black;
     margin-right: 20px;
@@ -76,7 +88,9 @@ height: 260px;
     background-color: red;
 color: white;
 }
-/* this is blogs section or different matches sectoihn */
+/* ----------------------------------------------------
+  this is blogs section or different matches sectoihn 
+----------------------------------------------------- */
 .blogs{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -108,4 +122,61 @@ border-radius: 10px;
     display: flex;
     justify-content: space-between;
 }
+/*---------------------------------------
+                         view all button
+-----------------------------------------*/
+.view-all-button{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 70px;
+    display: none;
+}
+.view-all-button div{
+width: 135px;
+background: #DD0000;
+padding:2px 25px;
+border-radius: 5px;
+text-align: center;
+color: white;
+font-size: 15px;
+}
+/* -------------------------------------------------
+                  footer section 
+----------------------------------------------------- */
 
+.footer-section{
+    height: 444px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: 
+    #161616;
+}
+.footer-detail{
+    width: 1200px;
+}
+
+.footer-info{
+    display: flex;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 16px;
+    color: #B9B9B9;
+}
+
+.footer-info div{
+    width: 900px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.footer-detail h1{
+    text-align: center;
+    font-weight: 600;
+    font-size: 40px;
+    color: white;
+    margin-bottom: 50px;
+}
+.footer-detail hr{
+    border: 1px solid #ffffff1a;
+    margin-bottom: 50px;
+}
